--- a/simple/simple.html
+++ b/simple/simple.html
@@ -9,6 +9,7 @@
              yourself using the dnd-moved attribute -->
         <li ng-repeat="item in list"
             dnd-draggable="item"
+            id="{{item.listId}}"
             dnd-moved="list.splice($index, 1)"
             dnd-effect-allowed="move"
             dnd-selected="models.selected = item"
