noch mehr neues :-)

--- a/dialog/dialoges.html
+++ b/dialog/dialoges.html
@@ -14,8 +14,8 @@
                 </md-toolbar>
                 <md-dialog-content>
 
-                    <md-tabs md-dynamic-height="true">
-                        <md-tab>
+                    <!--<md-tabs md-dynamic-height="true">
+                        <md-tab> Wird benötigt für Tabs und dynamische höhe-->
 
                             <md-tab-body>
                                 <div layout="column">
@@ -35,7 +35,7 @@
                                         <div>
                                             <input hidden id="inp_group" ng-model="projekt.group">
                                             <md-input-container class="md-block" flex="100">
-                                                <label>Projectstatus</label>
+                                                <label>Gruppe</label>
                                                 <md-select  id="inp_group_angular" ng-required="true"
                                                             ng-model="projekt.group">
                                                     <md-option ng-repeat="group in groups" value="{{group.grp_id[$index]}}">
@@ -63,9 +63,7 @@
                                 </div>
                             </md-tab-body>
 
-                        </md-tab>
 
-                    </md-tabs>
                 </md-dialog-content>
                 <md-dialog-actions>
                     <md-button class="md-primary" ng-click="closeDialog()">Abbrechen</md-button>
@@ -84,7 +82,7 @@
             <form name="virtForm" ng-cloak class="projectdialog">
                 <md-toolbar>
                     <div class="md-toolbar-tools">
-                        <h2>Neues Task erstellen</h2>
+                        <h2>Neuer Task erstellen</h2>
                         <span flex></span>
                         <md-button class="md-icon-button" ng-click="closeDialog()">
                             <img src="image/close.png" aria-label="Close dialog" class="ng-scope close">
@@ -93,8 +91,8 @@
                 </md-toolbar>
                 <md-dialog-content>
 
-                    <md-tabs md-dynamic-height="true">
-                        <md-tab>
+
+
 
                             <md-tab-body>
                                 <div layout="column">
@@ -153,9 +151,9 @@
                                 </div>
                             </md-tab-body>
 
-                        </md-tab>
 
-                    </md-tabs>
+
+
                 </md-dialog-content>
                 <md-dialog-actions>
                     <md-button class="md-primary" ng-click="closeDialog()">Abbrechen</md-button>
@@ -169,13 +167,13 @@
 
 
 <div style="visibility: hidden">
-    <div class="md-dialog-container" id="openSettings">
+    <div class="md-dialog-container" id="openaddGroup">
         <md-dialog aria-label="Settings">
 
             <form name="virtForm" ng-cloak class="projectdialog">
                 <md-toolbar>
                     <div class="md-toolbar-tools">
-                        <h2>Settings</h2>
+                        <h2>Gruppe zuweisen</h2>
                         <span flex></span>
                         <md-button class="md-icon-button" ng-click="closeDialog()">
                             <img src="image/close.png" aria-label="Close dialog" class="ng-scope close">
@@ -186,7 +184,7 @@
 
                     <div layout-sm="row" layout-align="start" layout-margin>
                         <div>
-                            <md-input-container class="md-block">
+                            <md-input-container class="md-block flexwith" flex>
                                 <label>User</label>
                                 <md-select id="select_user"
                                            ng-model="selectet_user">
@@ -200,7 +198,7 @@
 
                     <div layout-sm="row" layout-align="start" layout-margin>
                         <div>
-                            <md-input-container class="md-block">
+                            <md-input-container class="md-block flexwith" flex>
                                 <label>Gruppe</label>
                                 <md-select ng-change="showSaveButton = true"
                                            ng-model="major">
@@ -215,13 +213,52 @@
                     <md-dialog-actions>
                         <md-button class="md-primary" ng-click="closeDialog()">Abbrechen</md-button>
                         <md-dialog-actions
-                                ng-click="ngfilterdiv = false; showSaveButton = false" ng-show="groups.grp_name == empty">
-                            <md-button class="md-primary" ng-click="closeDialog()" id="create_group">Gruppe erstellen
+                                ng-click="ngfilterdiv = false; showSaveButton = false" >
+                            <md-button class="md-primary" ng-click="closeDialog()" id="add_group">Gruppe zuweisen
                             </md-button>
                         </md-dialog-actions>
-                        <md-dialog-actions
-                                ng-click="ngfilterdiv = false; showSaveButton = false" ng-show="groups.grp_name == empty && groups.grp_name != null">
-                            <md-button class="md-primary" ng-click="closeDialog()" id="add_group">Gruppe zuweisen
+
+                    </md-dialog-actions>
+            </form>
+        </md-dialog>
+    </div>
+</div>
+
+<div style="visibility: hidden">
+    <div class="md-dialog-container" id="opennewgroup">
+        <md-dialog aria-label="Settings">
+
+            <form name="virtForm" ng-cloak class="projectdialog">
+                <md-toolbar>
+                    <div class="md-toolbar-tools">
+                        <h2>Neue Gruppe erstellen</h2>
+                        <span flex></span>
+                        <md-button class="md-icon-button" ng-click="closeDialog()">
+                            <img src="image/close.png" aria-label="Close dialog" class="ng-scope close">
+                        </md-button>
+                    </div>
+                </md-toolbar>
+                <md-dialog-content>
+
+                    <div layout-sm="row" layout-align="start" layout-margin>
+                        <div>
+                            <md-input-container class="md-block">
+                                <input flex="100" type="text" id="inp_new_group_name"
+                                       class="form-control pull-left col-md-8 input-sm ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched"
+                                       placeholder="Neuer Gruppenname" data-toggle="tooltip"
+                                       title="Neuer Gruppenname"
+                                       name="task_beschrieb" ng-model="group.newgroupname"  ng-required="true"
+                                       data-original-title="Beschrieb">
+                            </md-input-container>
+                        </div>
+                    </div>
+
+
+
+                    <md-dialog-actions>
+                        <md-button class="md-primary" ng-click="closeDialog()">Abbrechen</md-button>
+                        <md-dialog-actions>
+                            <md-button class="md-primary" ng-click="closeDialog()" id="insert_new_group">Neue Gruppe erstellen
                             </md-button>
                         </md-dialog-actions>
 
