--- a/dialog/dialoges.html
+++ b/dialog/dialoges.html
@@ -94,30 +94,30 @@
 
 
 
-                            <md-tab-body>
-                                <div layout="column">
-                                    <div layout-sm="row" layout-align="start" layout-margin>
-                                        <div>
-                                            <md-input-container class="md-block">
-                                                <input flex="100" type="text" id="inp_task_titel"
-                                                       class="form-control pull-left col-md-8 input-sm ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched"
-                                                       placeholder="Task Titel" data-toggle="tooltip"
-                                                       title="Titel"
-                                                       name="task_titel" ng-model="task.titel"  ng-required="true"
-                                                       data-original-title="Titel">
-                                            </md-input-container>
-                                        </div>
-                                    </div>
-                                    <div layout-sm="row" layout-align="start" layout-margin>
-                                        <div>
-                                            <md-input-container class="md-block">
-                                                <input flex="100" type="text" id="inp_beschrieb_titel"
-                                                       class="form-control pull-left col-md-8 input-sm ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched"
-                                                       placeholder="Task Beschrieb" data-toggle="tooltip"
-                                                       title="Beschrieb"
-                                                       name="task_beschrieb" ng-model="task.beschreieb"  ng-required="true"
-                                                       data-original-title="Beschrieb">
-                                            </md-input-container>
+                    <md-tab-body>
+                        <div layout="column">
+                            <div layout-sm="row" layout-align="start" layout-margin>
+                                <div>
+                                    <md-input-container class="md-block">
+                                        <input flex="100" type="text" id="inp_task_titel"
+                                               class="form-control pull-left col-md-8 input-sm ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched"
+                                               placeholder="Task Titel" data-toggle="tooltip"
+                                               title="Titel"
+                                               name="task_titel" ng-model="task.titel"  ng-required="true"
+                                               data-original-title="Titel">
+                                    </md-input-container>
+                                </div>
+                            </div>
+                            <div layout-sm="row" layout-align="start" layout-margin>
+                                <div>
+                                    <md-input-container class="md-block">
+                                        <input flex="100" type="text" id="inp_beschrieb_titel"
+                                               class="form-control pull-left col-md-8 input-sm ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched"
+                                               placeholder="Task Beschrieb" data-toggle="tooltip"
+                                               title="Beschrieb"
+                                               name="task_beschrieb" ng-model="task.beschreieb"  ng-required="true"
+                                               data-original-title="Beschrieb">
+                                    </md-input-container>
                                     <!-- <div layout-sm="row" layout-align="start" layout-margin>
                                          <div>
                                              <md-input-container class="md-block" flex="100">
@@ -147,7 +147,7 @@
                                     </div>
 
                                 </div>
-                            </md-tab-body>
+                    </md-tab-body>
 
 
 
@@ -156,6 +156,118 @@
                 <md-dialog-actions>
                     <md-button class="md-primary" ng-click="closeDialog()">Abbrechen</md-button>
                     <md-button class="md-primary" id="save_new_task">Speichern
+                    </md-button>
+                </md-dialog-actions>
+            </form>
+        </md-dialog>
+    </div>
+</div>
+
+
+<div style="visibility: hidden">
+    <div class="md-dialog-container" id="updateTaskProject">
+        <md-dialog aria-label="Task bearbeiten">
+
+            <form name="virtForm" ng-cloak class="projectdialog">
+                <md-toolbar>
+                    <div class="md-toolbar-tools">
+                        <h2>Task bearbeiten</h2>
+                        <span flex></span>
+                        <md-button class="md-icon-button" ng-click="closeDialog()">
+                            <img src="image/close.png" aria-label="Close dialog" class="ng-scope close">
+                        </md-button>
+                    </div>
+                </md-toolbar>
+                <md-dialog-content>
+
+
+
+
+                    <md-tab-body>
+                        <div layout="column">
+                            <div layout-sm="row" layout-align="start" layout-margin>
+                                <div>
+                                    <md-input-container class="md-block">
+                                        <input flex="100" type="text" id="update_task_titel"
+                                               class="form-control pull-left col-md-8 input-sm ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched"
+                                               placeholder="Task Titel" data-toggle="tooltip"
+                                               title="Titel"
+                                               name="task_titel" ng-model="task.titel"  ng-required="true"
+                                               data-original-title="Titel">
+                                    </md-input-container>
+                                </div>
+                            </div>
+                            <div layout-sm="row" layout-align="start" layout-margin>
+                                <div>
+                                    <md-input-container class="md-block">
+                                        <input flex="100" type="text" id="update_beschrieb_titel"
+                                               class="form-control pull-left col-md-8 input-sm ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched"
+                                               placeholder="Task Beschrieb" data-toggle="tooltip"
+                                               title="Beschrieb"
+                                               name="task_beschrieb" ng-model="task.beschreieb"  ng-required="true"
+                                               data-original-title="Beschrieb">
+                                    </md-input-container>
+
+
+
+
+
+                                    <div layout-sm="row" layout-align="start" layout-margin>
+                                    <div>
+                                        <input hidden id="update_sprint" ng-model="sprint.sprint_name">
+                                        <md-input-container class="md-block flexwith" flex>
+                                            <label>Sprint</label>
+                                            <md-select ng-change="showSaveButton = true"
+                                                       ng-model="sprint.sprint_name">
+                                                <md-option ng-repeat="sprint in sprints" value="{{sprint.spr_name}}">
+                                                    {{sprint.spr_name}}
+                                                </md-option>
+                                            </md-select>
+                                        </md-input-container>
+                                    </div>
+                                </div>
+
+
+                                    <div layout-sm="row" layout-align="start" layout-margin>
+                                    <div>
+                                        <input hidden id="update_prio" ng-model="task.prio">
+                                        <md-input-container class="md-block" flex="100">
+                                            <label>Priorität</label>
+                                            <md-select  id="update_prio_angular" ng-required="true"
+                                                        ng-model="task.prio">
+                                                <md-option ng-repeat="prio in taskprio" value="{{$index+1}}">
+                                                    {{prio.abbrev}}
+                                                </md-option>
+                                            </md-select>
+                                        </md-input-container>
+                                    </div>
+                                </div>
+
+                                    <div layout-sm="row" layout-align="start" layout-margin>
+                                        <div>
+                                            <input hidden id="update_status" ng-model="update_status_angular">
+                                            <md-input-container class="md-block flexwith" flex>
+                                                <label>Projectstatus</label>
+                                                <md-select ng-change="showSaveButton = true"
+                                                           ng-model="update_status_angular">
+                                                    <md-option ng-repeat="projectstate in projectstatus" value="{{projectstate.value}}">
+                                                        {{projectstate.abbrev}}
+                                                    </md-option>
+                                                </md-select>
+                                            </md-input-container>
+                                        </div>
+                                    </div>
+
+                                </div>
+                    </md-tab-body>
+
+
+
+
+                </md-dialog-content>
+                <md-dialog-actions>
+                    <md-button class="md-primary" ng-click="closeDialog()">Abbrechen</md-button>
+                    <md-button class="md-primary" id="update_new_task">Speichern
                     </md-button>
                 </md-dialog-actions>
             </form>
